# echomodel

./: CONTRIBUTING.md  README.md  pyproject.toml
src/aicfg/cli/: skills.py
src/aicfg/mcp/: server.py
src/aicfg/sdk/: config.py  skills.py
tests/: test_skills.py
to-integrate/: skill-stats.py
