[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echomodel"
version = "0.2.1"
description = "AI agent ecosystem — cross-platform skill management, MCP tools, and configuration"
requires-python = ">=3.11"
dependencies = [
    "click",
    "toml",
    "rich",
    "pyyaml",
    "mcp",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
em = "aicfg.cli:cli"
echomodel = "aicfg.cli:cli"
aicfg = "aicfg.cli:cli"
aicfg-mcp = "aicfg.mcp.server:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aicfg = ["*.yaml"]
